--- a/CONTACTOS.html
+++ b/CONTACTOS.html
@@ -13,9 +13,8 @@
     <header>
         <div>
             <nav>
-                <div>LOGO ADSO</div>
+                <!--LOGO ADSO-->
                 <ul>
-                    <img src="IMAGENES/logo-sena-verde-png-sin-fondo.png" alt="LOGO" width="100" height="100">
                     <li><a href="index.html">Inicio </a></li>
                     <li><a href="INFORMACION PERSONAL.html">Informacion personal</a></li>
                     <li><a href="NOSOTROS.html">Nosotros</a></li>
@@ -30,23 +29,24 @@
         <h1>Tecnologo Analisis y Desarrollo de Software</h1>
         <section>
         </section>
-        <p>
-            <p>
                </p>
                <!--AGREGAR IMAGES -->
-               <div>
-                 <ul>
-                   </ul>
-               </div>
            </p>
        </section>
-       
        </main>
        <div>
         <i class="fa fa-phone"></i> (57)3103224093<br>
         <i class="fas fa-home"></i> Barrio El Porvenir, Villeta Cund<br>
         <i class="fas fa-envelope"></i> mcastaneda797@soy.sena.edu.co<br>
     </div>
+    <ul>
+    <br>
+    <img src="IMAGENES/descarga.jpg" alt="Facebook" width="50" height="50">
+                    <br>
+                    <img src="IMAGENES/Instagram2.jpg" alt="Instagram" width="50" height="50">
+                    <br>
+                    <img src="IMAGENES/logo-sena-verde-png-sin-fondo.png" alt="LOGO" width="50" height="50">
+                </ul>
        </body>
        </html>
 
