--- a/INFORMACION PERSONAL.html
+++ b/INFORMACION PERSONAL.html
@@ -12,9 +12,8 @@
     <header>
         <div>
             <nav>
-                <div>LOGO ADSO</div>
+                <!--LOGO ADSO-->
                 <ul>
-                    <img src="IMAGENES/logo-sena-verde-png-sin-fondo.png" alt="LOGO" width="100" height="100">
                     <li><a href="index.html">Inicio </a></li>
                     <li><a href="INFORMACION PERSONAL.html">Informacion personal</a></li>
                     <li><a href="NOSOTROS.html">Nosotros</a></li>
@@ -31,27 +30,36 @@
             <article>
                 <img src="IMAGENES/Foto mc.jpeg" class="imagen">
                 <h2>Mariana Castañeda Agudelo</h2>
+                <h3>PERFIL</h3>
+                <p>
+                    Soy una persona activa, aprendo rápido, me motivo cada día a alcanzar mis metas,
+                con ganas de trabajar valores morales desde casa.
+                </p>
                 <h3>EDUCACION</h3>
                 <li>Bachiller Academico - Colegio Miguel Angel Cornejo
                     Facatativa cund</li>
                 <li> Tecnologo en Analisis y Desarrollo de Software</li>
                 <p>
-                    <h4>HABILIDADES</h4>
+                    <h3>HABILIDADES</h3>
                     <li>Trabajo bajo presión</li>
                     <li>Facilidad para seguir ordenes </li>
                     <li>Trabajo en equipo</li>
 
-                    <h5>EXPERIENCIA LABORAL</h5>
+                    <h3>EXPERIENCIA LABORAL</h3>
                     <li>Atencion al cliente - Hotel Balneario Brisas de Cambulos</li>
                 </p>
             </article>
-
         </section>
     </main>
-    <main>
-        <h4></h4>
-
-    </main>
+    <div>
+        <ul>
+            <img src="IMAGENES/descarga.jpg" alt="Facebook" width="50" height="50">
+            <br>
+            <img src="IMAGENES/Instagram2.jpg" alt="Instagram" width="50" height="50">
+            <br>
+            <img src="IMAGENES/logo-sena-verde-png-sin-fondo.png" alt="LOGO" width="50" height="50">
+        </ul>
+    </div>
     
 </body>
 </html>
