--- a/NOSOTROS.html
+++ b/NOSOTROS.html
@@ -13,9 +13,8 @@
     <header>
         <div>
             <nav>
-                <div>LOGO ADSO</div>
+                <!--LOGO ADSO-->
                 <ul>
-                    <img src="IMAGENES/logo-sena-verde-png-sin-fondo.png" alt="LOGO" width="100" height="100">
                     <li><a href="index.html">Inicio </a></li>
                     <li><a href="INFORMACION PERSONAL.html">Informacion personal</a></li>
                     <li><a href="NOSOTROS.html">Nosotros</a></li>
@@ -32,11 +31,15 @@
             <h2>ADSO</h2>
         </section>
         <p>
-            <p>
-               </p>
                <!--AGREGAR IMAGES -->
                <div>
-
+                <ul>
+                    <img src="IMAGENES/descarga.jpg" alt="Facebook" width="50" height="50">
+                    <br>
+                    <img src="IMAGENES/Instagram2.jpg" alt="Instagram" width="50" height="50">
+                    <br>
+                    <img src="IMAGENES/logo-sena-verde-png-sin-fondo.png" alt="LOGO" width="50" height="50">
+                </ul>
                </div>
            </p>
        </section>
